Added index info

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div class="hero">
         <div class="hero-head">
-            
+            <div class="navbar">
+                
+            </div>
         </div>
     </div>
 </body>
